# chmmpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_dev.sh
chmmpp/: CHMM.cpp  CHMM.hpp  CMakeLists.txt  Constraint_Oracle.hpp  HMM.cpp  HMM.h  HMM.hpp  HMM_inference.cpp  HMM_inference.hpp  LPModel.cpp  LPModel.hpp  Options.hpp  chmmpp.hpp  vectorhash.cpp  vectorhash.hpp
chmmpp/inference/: HMM_inference.cpp  HMM_inference.hpp  LPModel.cpp  LPModel.hpp  aStar.cpp  aStarMultOracle.cpp  aStarMult_numZeros.cpp  aStarOracle.cpp  aStar_numZeros.cpp  aStar_oracle.cpp  inference.hpp  lp_map.cpp  viterbi.cpp
chmmpp/learn/: LearnStochastic.cpp  LearnStochastic.hpp  estimate_hmm.cpp  learn.hpp  learn_batch.cpp  learn_hardEM.cpp  learn_numZeros.cpp  learn_semisupervised_hardEM.cpp  learn_stochastic.cpp  learn_unconstrained.cpp  log_likelihood_estimate.cpp
chmmpp/mip/: test.cpp  test.hpp
chmmpp/util/: Options.cpp  Options.hpp  math.hpp
cmake/: Clang-Format.cmake
examples/: CMakeLists.txt  simpleInfer.cpp  simpleInferMultiple.cpp  simpleLearn.cpp  simpleLearnMC.cpp  tourInfer.cpp  tourInferMultiple.cpp
examples/citation/: citationHMM.cpp  citationHMM.hpp  citation_aStar.cpp  citation_learn.cpp  citation_mip.cpp  readFile.cpp  readMe.txt  simpleLearn.cpp
examples/numZeros/: learnTest.cpp  multInfer.cpp  numZerosHMM.cpp  numZerosHMM.hpp  numZeros_aStar.cpp  numZeros_learn.cpp  numZeros_mip.cpp  numZeros_mip.hpp  simpleInfer.cpp  simpleLearn.cpp
examples/syntheticCitation/: learnTest.cpp  simpleLearn.cpp  syntheticCitationHMM.cpp  syntheticCitationHMM.hpp  syntheticCitation_mip.cpp  syntheticCitation_mip.hpp
misc/: CMakeLists.txt  exponential_learning.cpp
test/: CMakeLists.txt  test_chmm.cpp  test_foo.cpp  test_hmm.cpp  test_options.cpp
